.config/waybar/style.css
@define-color foreground #d8dee9;
@define-color background #2e3440;
* {
    /* `otf-font-awesome` is required to be installed for icons */
    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
    font-size: 13px;
  background-color: @background;
  color: @foreground;
}

.modules-left {
  margin-left: 8px;
}

.modules-right {
  margin-right: 8px;
}

#workspaces button {
  all: initial;
  padding: 0 6px;
  margin: 0 1.5px;
  min-width: 9px;
}

#workspaces button.empty {
  opacity: 0.5;
}

/* Force remove hover shadow */
#workspaces:hover {
    background: inherit;
    box-shadow:  0 0px #ffffff;
}

#tray,
#cpu,
#battery,
#network,
#bluetooth,
#pulseaudio,
#clock,
#memory,
#keyboard-state,
#tray,
#hyprland-language,
#temperature,
#custom-update {
  min-width: 12px;
  margin: 0 5.5px;
}

:hover {
    background: inherit;
    box-shadow: inset 0 -1px #ffffff;
}

#custom-expand-icon {
  margin-right: 7px;
}

#tooltip {
  padding: 2px;
}

#custom-update {
  font-size: 10px;
}

.hidden {
  opacity: 0;
}

#custom-power {
    padding-left: 8px;
    font-size: 16px;
}

